force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Associated_Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Associated_Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators populate this optional lookup field with the record they want to associate. By default, it is blank.</description>
    <label>Associated Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Associated Child Records</relationshipLabel>
    <relationshipName>Associated_Child_Records</relationshipName>
    <type>Lookup</type>
</CustomField>