force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Cloned_Source_Row__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cloned_Source_Row__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a row is cloned from a Spreads Statement Record, the system auto-populates this optional lookup field with the row id.</description>
    <label>Cloned Source Row</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Row Clones</relationshipLabel>
    <relationshipName>Row_Clones</relationshipName>
    <type>Lookup</type>
</CustomField>