force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Type__c</fullName>
    <description>This field is required and automatically updated. Determines display of Spread Statement Record.</description>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
                <default>true</default>
                <label>Use Group Type</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>