force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Formula_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Formula_Long_Text__c</fullName>
    <description>Users populate this optional text field with a formula that defines the values in the Spreads row. By default, it is blank.</description>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>