force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Is_Linked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Linked__c</fullName>
    <description>This field is optional. It is populated automatically based on whether the &quot;LLC_BI__Spread_Statement_Record_Total__c&quot; and &quot;LLC_BI__Spread_Statement_Record__c&quot; fields have values. It tells the system whether the spread statement record (chart of account) is pulling its value from another chart of account or group total. If either of those fields have a value, this is enabled, otherwise it is disabled. If enabled, values cannot be manually entered for this record. By default, it is disabled.</description>
    <formula>NOT(AND( ISBLANK( LLC_BI__Linked_Spread_Statement_Record__c ) ,ISBLANK(  LLC_BI__Linked_Spread_Statement_Total_Group__c  )))</formula>
    <label>Is Linked</label>
    <type>Checkbox</type>
</CustomField>