force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Linked_Spread_Statement_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Linked_Spread_Statement_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and manually updated. If set then this spread statement record is read-only and linked to the referenced spread statement record.</description>
    <label>Linked Spread Statement Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Spread Statement Records</relationshipLabel>
    <relationshipName>Spread_Statement_Records</relationshipName>
    <type>Lookup</type>
</CustomField>