force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Linked_Spread_Statement_Total_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Linked_Spread_Statement_Total_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and manually updated. If set then this spread statement record is read-only and linked to the referenced spread statement total group.</description>
    <label>Linked Spread Statement Total Group</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Spread Statement Records (Linked Spread Statement Total Group)</relationshipLabel>
    <relationshipName>Spread_Statement_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>