force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Operation_Subtract__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Operation_Subtract__c</fullName>
    <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the currently calculated value in the group is subtracted by the value for this spread statement record (chart of account). When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is set to &quot;SUBTRACT&quot;</description>
    <formula>ISPICKVAL(LLC_BI__Operation__c, &apos;SUBTRACT&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Subtract</label>
    <type>Checkbox</type>
</CustomField>