force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Prior_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prior_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. User updated. When checked, linked records will populate any period in a certain year with the value of the period marked as fiscal year in the previous year.</description>
    <label>Prior Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>