force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>LLC_BI__Spread_Statement_Record_Total__c</columns>
    <columns>LLC_BI__Linked_Spread_Statement_Record__c</columns>
    <columns>LLC_BI__Linked_Spread_Statement_Total_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Year adj.</value>
    </filters>
    <label>Name and Total View</label>
    <language>en_US</language>
</ListView>